# chatree-server

./: .gitignore  Cargo.toml  LICENSE  diesel.toml
.sqlx/: query-5726bbe0b6e4b976a682604a2d342173d68b50d872675c0561229108bb9f8207.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-c4d03ffc817bad8a59d5eea27b1f97a4eb2591af261ad7efe08a0eb85fc8940f.json
endpoints/: test.http
http/: test.http
migrations/: 01_users.up.sql  02_chat.down.sql  02_chat.up.sql
migrations/2025-07-24-212849_users/: up.sql
migrations/2025-07-25-113208_chat/: down.sql  up.sql
src/: app_state.rs  core.rs  main.rs  schema.rs  settings.rs
src/auth/: auth.rs  mod.rs  signup.rs
src/cache/: cache.rs
src/crypto/: auth_service.rs  mls.rs  mod.rs
src/models/: chat.rs  message.rs  mod.rs  user.rs
src/websocket/: mod.rs  websocket.rs
