[package]
name = "chatree-server"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1

[dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
tokio = { version = "1.47.0", features = ["full"] }
futures = "0.3.31"
tokio-tungstenite = "0.27.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3"
timedmap = "1.0.2"
diesel = { version = "2.2.12", features = ["postgres", "serde_json", "chrono"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres", "rt_tokio_1", "serde", "tracing"]}
chrono = { version = "0.4.41", features = ["serde"] }
ferroid = { version = "0.5.5", features = ["async-tokio", "snowflake", "serde"] }
machine-uid = "0.5.3"
rand = "0.9.2"
diesel-async = { version = "0.6.1", features = ["postgres", "deadpool"] }
dotenv = "0.15.0"
argon2 = { version = "0.5.3", features = ["std"]}
futures-util = "0.3.21"
rustls = "0.20.8"
tokio-postgres = "0.7.7"
rustls-native-certs = "0.6.2"
tokio-postgres-rustls = "0.9.0"
