[package]
name = "chatree-server"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1

[dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
jsonwebtoken = "9.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3"
timedmap = "1.0.2"
chrono = { version = "0.4.41", features = ["serde"] }
ferroid = { version = "0.6.1", features = ["async-tokio", "snowflake", "serde"] }
machine-uid = "0.5.3"
rand = "0.9.2"
dotenv = "0.15.0"
argon2 = { version = "0.5.3", features = ["std"]}
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "tls-native-tls", "derive", "macros", "chrono", "migrate"] }
futures-util = "0.3.31"
futures = "0.3.31"
